--- a/todo.txt
+++ b/todo.txt
@@ -40,3 +40,4 @@ To Do on current task:
 - factor out theme
 - factor out layout (with TDD?)
 - Improve our client directory structure
+- Split our CSS tests into multiple files
