Factored out drawing area's arrow element

--- a/todo.txt
+++ b/todo.txt
@@ -33,7 +33,7 @@ Engineering Tasks:
 To Do on current task:
 * factor out blocks (with TDD)
   * factor out drawing area
-    - uncomment 'under()' tests in 'has flourishes inside drawing area'
+    - clear button
   - factor out header
   - factor out subheader
   - factor out tagline
