--- a/todo.txt
+++ b/todo.txt
@@ -33,6 +33,7 @@ Engineering Tasks:
 To Do on current task:
 * factor out blocks (with TDD)
   * factor out 404 headline
+- Load normalize.css in test frame (ref Laurent Bourgault-Roy E344 http://www.letscodejavascript.com/v3/comments/live/344#comment-2264149684)
 - factor out theme
   - factor out subheader
   - factor out tagline
