--- a/todo.txt
+++ b/todo.txt
@@ -30,11 +30,13 @@ User Stories to finish current MMF:
 	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 
 Engineering Tasks:
-- integrate
 - upgrade to iOS 9
 - install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 - Improve our client directory structure
 - Split our CSS tests into multiple files
 
 To Do on current task:
-*
+* AT START OF NEXT EPISODE:
+	- integrated
+	- deployed
+	
