--- a/todo.txt
+++ b/todo.txt
@@ -41,3 +41,4 @@ To Do on current task:
 	- deployed
 	- updated dependencies
 	- ran into Windows+npm path length problem (Karma's fault)
+	- upgraded Node 0.12.4 --> 5.0.0
