--- a/todo.txt
+++ b/todo.txt
@@ -30,25 +30,12 @@ User Stories to finish current MMF:
 	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 
 Engineering Tasks:
-- install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 - Improve our client directory structure
 - Split our CSS tests into multiple files
+- install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 
 To Do on current task:
-* AT START OF NEXT EPISODE:
-	- integrated
-	- deployed
-	- updated dependencies
-	- upgraded Mobile Safari & iOS from v8 to v9
-	- ran into Windows+npm path length problem (Karma's fault)
-	- upgraded Node 0.12.4 --> 5.0.0
-	- flattened npm modules:
-		- `rm -rf node_modules`
-		- `npm install --ignore-scripts`
-		- commit
-		- `npm rebuild`
-		- `git status`
-		- update .gitignore (mostly just stripping out nesting)
-		- remove optional modules
-		- `git commit -a --amend`
-		- git was smart enough to rename the majority of files!
+- Rename generated/build/ to generated/dist/
+- Make a content/ directory and move our content into it
+- Move CSS tests into content directory
+- Move remaining client JavaScript into code/ directory?
