Moved client JavaScript into js/ subdirectory

--- a/todo.txt
+++ b/todo.txt
@@ -36,7 +36,8 @@ Engineering Tasks:
 - install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 
 To Do on current task:
-* Make a content/ directory and move our content into it
-- Make JS build into a client/js/ directory
-- Move CSS tests into content directory
+* Move CSS tests into content directory
 - Move remaining client JavaScript into code/ directory?
+- Is there a better of handling cross-directory requires (e.g., `require("../shared/_assert.js")` broke)?
+- Where do we want our vendor files to live?
+- Move hard-coded paths in Jakefile.js to paths.js?
