--- a/todo.txt
+++ b/todo.txt
@@ -30,7 +30,7 @@ User Stories to finish current MMF:
 	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 
 Engineering Tasks:
-* Improve our client directory structure
+* Separate CSS and client tests in build
 - Split our CSS tests into multiple files
 - Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
 - install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
@@ -39,4 +39,3 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* Move CSS tests into content directory
