CSS test task in build only runs tests with CSS in title

--- a/todo.txt
+++ b/todo.txt
@@ -39,6 +39,6 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* Run CSS subset of tests in build
 - Run non-CSS subset of tests in build
 - Run CSS tests incrementally
+- Properly tag our tests as CSS or client
