Fixed issue that was preventing CSS tests from running

--- a/todo.txt
+++ b/todo.txt
@@ -39,7 +39,5 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* Run CSS tests incrementally
-- Rename paths.clientFiles to paths.clientJavaScriptTestDependencies (or something)
-- Properly tag our tests as CSS or client
-	- Run non-CSS subset of tests in build
+* Properly tag our tests as CSS or client
+- Run non-CSS subset of tests in build
