--- a/todo.txt
+++ b/todo.txt
@@ -30,8 +30,7 @@ User Stories to finish current MMF:
 	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 
 Engineering Tasks:
-* Separate CSS and client tests in build
-- Split our CSS tests into multiple files
+* Split our CSS tests into multiple files
 - Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
 - install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 - Is there a better of handling cross-directory requires (e.g., `require("../shared/_assert.js")` broke)?
@@ -39,5 +38,3 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* Properly tag our tests as CSS or client
-- Run non-CSS subset of tests in build
