--- a/todo.txt
+++ b/todo.txt
@@ -39,10 +39,7 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-- Rename _css_info --> _css_test_helper?
-* Factor out common CSS test functions
-- _theme_css_test.js
-- _layout_css_test.js
+* _layout_css_test.js
 - _button_css_test.js
 - _logo_css_test.js
 - _not_found_css_test.js
