--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,7 @@ User Stories to finish current MMF:
 Engineering Tasks:
 * Split our CSS tests into multiple files
 - Erase test files (starting with underscore) from dist/client
+- Restore 'it.only()' functionality of client test build (conflicts with grep-based test subsetting)
 - Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
 - install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 - Is there a better of handling cross-directory requires (e.g., `require("../shared/_assert.js")` broke)?
@@ -39,8 +40,6 @@ Engineering Tasks:
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* _button_css_test.js
-- _logo_css_test.js
 - _not_found_css_test.js
 - _drawing_area_css_test.js
 - _index_test.js
