--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@ Minimum Marketable Features:
   - drawing glitches occur when exiting drawing area that is flush against side of browser
   - one-pixel gap on right side of drawing area (Firefox, others unknown)
   - favicon
+	- iOS buttons flash rather than depressing
+	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 ? multiple painting/erasing tools
 - collaborative painting
 - save the pages (persistence / databases)
@@ -25,21 +27,16 @@ Minimum Marketable Features:
 User Stories to finish current MMF:
 * update design
 - release
-- CSS polish
-	- iOS buttons flash rather depressing
-	- IE 9 and IE 11, button goes diagonally rather than vertically (but only for button, not for links)
 
 Engineering Tasks:
 * Split our CSS tests into multiple files
 - Erase test files (starting with underscore) from dist/client
 - Restore 'it.only()' functionality of client test build (conflicts with grep-based test subsetting)
 - Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
-- install csslint (ref Laurent Bourgault-Roy E339 http://www.letscodejavascript.com/v3/comments/live/339#comment-2240636858)
 - Is there a better of handling cross-directory requires (e.g., `require("../shared/_assert.js")` broke)?
 - Where do we want our vendor files to live?
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-- _drawing_area_css_test.js
-- _index_test.js
+* _index_test.js
 - _404_test.js
