Removed test files from distribution directory

--- a/todo.txt
+++ b/todo.txt
@@ -29,14 +29,15 @@ User Stories to finish current MMF:
 - release
 
 Engineering Tasks:
-* Split our CSS tests into multiple files
-- Erase test files (starting with underscore) from dist/client
+* Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
 - Restore 'it.only()' functionality of client test build (conflicts with grep-based test subsetting)
-- Run server code out of generated/dist as well (fix hardcoded path in weewikipaint.js)
 - Is there a better of handling cross-directory requires (e.g., `require("../shared/_assert.js")` broke)?
 - Where do we want our vendor files to live?
 - Move hard-coded paths in Jakefile.js to paths.js?
 
 To Do on current task:
-* _index_test.js
-- _404_test.js
+- Copy server code into dist directory
+- Modify runners to run out of the distribution directory
+	- Procfile
+	- weewikipaint.js
+- Rename weewikipaint.js --> run.js?
