Installed socket.io

--- a/todo.txt
+++ b/todo.txt
@@ -41,6 +41,7 @@ User Stories to finish current MMF:
 Engineering Tasks:
 * Spike it locally
 - Test that it works with Heroku
+- Figure out bundling and distribution for socket.io client (in the next story)
 
 To Do on current task:
 * Re-create example app
