Started first socket.io test

--- a/todo.txt
+++ b/todo.txt
@@ -45,6 +45,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Figure out how to write a test for client/server reflection
+	- Implement server-side code
 - Test-drive a simple server-side emit
 - Test-drive most basic version of client/server reflection
 - ???
