--- a/todo.txt
+++ b/todo.txt
@@ -55,3 +55,4 @@ To Do on current task:
 - OFF CAMERA:
 	- Look into lack of coloring in Karma tests
 	- Clear up extraneous modules (`npm list --depth=0`)
+	- Investigate Morten Poulsen solution to socket.io race condition: http://www.letscodejavascript.com/v3/comments/live/377#comment-2466061078
