Removed extraneous npm modules

--- a/todo.txt
+++ b/todo.txt
@@ -46,9 +46,10 @@ Engineering Tasks:
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 
 To Do on current task:
-- OFF CAMERA:
+- AT START OF NEXT EPISODE:
 	- Integrate
-	- Look into lack of coloring in Karma tests
 	- Clear up extraneous modules (`npm list --depth=0`)
+- OFF CAMERA:
+	- Look into lack of coloring in Karma tests
 	- Investigate Morten Poulsen solution to socket.io race condition: http://www.letscodejavascript.com/v3/comments/live/377#comment-2466061078
 	- Alternatively, new version of socket.io is supposed to fix it
