--- a/todo.txt
+++ b/todo.txt
@@ -48,9 +48,9 @@ Engineering Tasks:
 To Do on current task:
 - AT START OF NEXT EPISODE:
 	- Integrated
+	- Fixed Karma coloring by using simplebuild-karma
 	- Cleared up extraneous modules (`npm list --depth=0`)
 	- socket.io hanging problem fixed in v1.4.5 (issue #935, https://github.com/socketio/socket.io-client/issues/935)
 - OFF CAMERA:
-	- Look into lack of coloring in Karma tests
 	- Update dependencies
 	- Update Node version
