--- a/todo.txt
+++ b/todo.txt
@@ -45,8 +45,7 @@ Engineering Tasks:
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 
 To Do on current task:
+- AT START OF EPISODE:
+	- Reported socket.io server hang: https://github.com/socketio/socket.io/issues/1602
 * Create a bare-bones real_time_network.js
 - Create pointer status abstraction
-
-- OFF-CAMERA:
-	- Report socket.io race condition involving multiple browsers (ref episode 386)
