--- a/todo.txt
+++ b/todo.txt
@@ -45,5 +45,5 @@ Engineering Tasks:
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 
 To Do on current task:
-* Create a bare-bones real_time_network.js
+- Figure out how to make assertions about the connected clients
 - Create pointer status abstraction
