--- a/todo.txt
+++ b/todo.txt
@@ -45,8 +45,5 @@ Engineering Tasks:
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 
 To Do on current task:
-- Figure out how to make assertions about the connected clients
-	- MS Edge and IE 11 are caching results of AJAX request
-	- Take socket.io connections out of connected list if they close
-- Clean up test harness code
+* Clean up test harness code
 - Create pointer status abstraction
