--- a/todo.txt
+++ b/todo.txt
@@ -50,3 +50,4 @@ To Do on current task:
 - Should real_time_network be object-oriented?
 - Create assert.isTrue and assert.isFalse?
 - Clean up test harness code
+- Implement timeout in server code
